do something with  player.ejs, but mainly commit to another branch so i can restart

--- a/views/player.ejs
+++ b/views/player.ejs
@@ -5,6 +5,6 @@
         <title>BattleStats Player Stats</title>
     </head>
     <body>
-        <h1>Player Statistics: <%= playerid %></h1>
+        <h1>Player Statistics</h1>
     </body>
 </html>
