--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Login</h1>
+        <p>{% if message %}{{message}}{% endif %}</p>
         <form method="post">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" required>
