--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,5 @@
-<html>
-    <head>
-        <title>Sign Up</title>
-    </head>
-    <body>
+{% extends "main.html" %}
+{% block content %}
         <h1>Sign Up</h1>
         <p>{% if message %}{{message}}{% endif %}</p>
         <form method="post">
@@ -17,5 +14,4 @@
             <br>
             <input type="submit" value="Sign Up">
         </form>
-    </body>
-</html>
+{% endblock %}
