--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,5 @@
-<html>
-    <head>
-        <title>Login</title>
-    </head>
-    <body>
+{% extends "main.html" %}
+{% block content %}
         <h1>Login</h1>
         <p>{% if message %}{{message}}{% endif %}</p>
         <form method="post">
@@ -14,5 +11,4 @@
             <br>
             <input type="submit" value="Login">
         </form>
-    </body>
-</html>
+{% endblock %}
