--- a/static/main.css
+++ b/static/main.css
@@ -4,10 +4,13 @@ body {
     padding: 0%;
     margin: 0%;
     text-align: center;
+    align-items: center;
 }
 article {
     padding-left: 20%;
     padding-right: 20%;
+    text-align: left;
+    align-items: left;
 }
 
 table, th, td {
