--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,9 +9,14 @@
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" required>
             <br>
-            <label for="authtoken">BattleTabs Auth Token:</label>
-            <input type="text" name="authtoken" id="authtoken" required>
+
+            <label for="email">BattleTabs Email:</label>
+            <input type="email" name="email" id="email" required>
             <br>
+            <label for="bt">BattleTabs Password:</label>
+            <input type="password" name="bt" id="bt" required>
+            <br>
+            <p>Note: You Battletabs Password will be deleted once it has been used to generate an authToken.</p><br>
             <input type="submit" value="Sign Up">
         </form>
 {% endblock %}
