start progress on web design

--- a/templates/accounts_login.html
+++ b/templates/accounts_login.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/static/login.css">
+        <link rel="stylesheet" href="/static/css/login.css">
         <title>Login | BattleStats</title>
     </head>
     <body>
         <div class="main">
             <h1>Login</h1>
-            <br><br><br><br>
             <span>
                 <form>
                     <label for="username">Username</label><br>
                     <input type="text" name="username">
+                    <br>
+                    <label for="password">Password</label><br>
+                    <input type="password" name="password">
+                    <br>
+                    <input type="submit" value="Login">
+                    <br>
+                    <a href="/register">Register</a>
                 </form>
             </span>
         </div>
