--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,7 +22,7 @@
 
 body {
     background-color: #dddddd;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     align-items: center;
 }
