--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
         <title>BattleStats</title>
         {% endif %}
 
-        <link rel="stylesheet" href="/static/main.css">
+        <link rel="stylesheet" href="/static/css/main.css">
     </head>
     <body>
         <div class="navbar">
