--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,7 +1,46 @@
 body {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 100px;
-}
-span {
-}
+                font-family: Arial, sans-serif;
+                background-color: #f4f4f4;
+                margin: 0;
+                padding: 20px;
+            }
+            .main {
+                max-width: 400px;
+                margin: auto;
+                background: white;
+                padding: 20px;
+                border-radius: 5px;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            }
+            h1 {
+                text-align: center;
+            }
+            label {
+                display: block;
+                margin-bottom: 5px;
+            }
+            input[type="text"],
+            input[type="password"],
+            input[type="email"] {
+                width: 100%;
+                padding: 10px;
+                margin-bottom: 10px;
+                border-radius: 3px;
+                border: 1px solid #ccc;
+            }
+            button, input[type="submit"] {
+                width: 100%;
+                padding: 10px;
+                background-color: #bebebe;
+                color: rgb(0, 0, 0);
+                border: none;
+                border-radius: 3px;
+                cursor: pointer;
+            }
+            button:hover, input[type="submit"]:hover {
+                background-color: #858585;
+            }
+            .bt {
+                text-align: center;
+                margin-top: 10px;
+            }
