--- a/templates/account_login.html
+++ b/templates/account_login.html
@@ -7,17 +7,21 @@
     <body>
         <div class="main">
             <h1>Login</h1>
-            <span>
+            <span class="error">
+                {% if error %}
+                    <p style="color:red;text-align: center;">{{ error }}</p>
+                {% endif %}
+            </span>
                 <form>
                     <label for="username">Username</label><br>
                     <input type="text" name="username">
                     <br>
                     <label for="password">Password</label><br>
                     <input type="password" name="password">
-                    <br>
-                    <input type="submit" value="Login">
-                    <br>
-                    <a href="/register">Register</a>
+                    <br><br>
+                    <input id="login" type="submit" value="Login">
+                    <br><br>
+                    <a style="text-align: center;" href="/account/register">Register</a>
                 </form>
             </span>
         </div>
