--- a/templates/misc_index.html
+++ b/templates/misc_index.html
@@ -3,6 +3,6 @@
 <div class="full">
     <h1 class="title">Welcome to BattleStats!</h1>
     <p>BattleStats is a stat tracker and analyser for the game <a href="https://battletabs.io">BattleTabs</a>.<br>
-    To get started, <a href="/signup">signup</a> for an account or <a href="/login">login</a> to your existing one.</p>
+    To get started, <a href="/account/register">signup</a> for an account or <a href="/account/login">login</a> to your existing one.</p>
 </div>
 {% endblock %}
