--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,12 @@
 .navbar {
     background-color: #333;
     color: #ffffff;
-    padding-left: 10px;
     padding-right: 20px;
     margin: 20px;   
     width: 70%;
     border-radius: 10px;
     display: inline-block;
+    height: 65px;
 }
 .navbutton, .navtitle {
     background-color: #333;
