--- a/templates/account_login.html
+++ b/templates/account_login.html
@@ -12,7 +12,7 @@
                     <p style="color:red;text-align: center;">{{ error }}</p>
                 {% endif %}
             </span>
-                <form>
+                <form action="/account/login" method="post">
                     <label for="username">Username</label><br>
                     <input type="text" name="username">
                     <br>
