--- a/templates/main.html
+++ b/templates/main.html
@@ -6,11 +6,14 @@
         {% else %}
         <title>BattleStats</title>
         {% endif %}
-
+        <link rel="icon" href="/static/images/favicon.png" type="image/png">
         <link rel="stylesheet" href="/static/css/main.css">
+        {% block head %}
+        {% endblock %}
     </head>
     <body>
         <div class="navbar">
+            <image class="logo" src="/static/images/logo.png" alt="BattleStats Logo" width="65px" height="65px" style="float:left;">
             <button class="navtitle"  style="float:left;">BattleStats</button>
             <button class="navbutton" style="float:left;" onclick="location.href='/'">Home</button>
             <button class="navbutton" style="float:left;" onclick="location.href='/player'">Player</button>
@@ -19,7 +22,7 @@
             {% if user %}
             <button class="navbutton" style="float:right;" onclick="location.href='/account'">Account</button>
             {% else %}
-            <button class="navbutton" style="float:right;" onclick="location.href='/login'">Login</button>
+            <button class="navbutton" style="float:right;" onclick="location.href='/account/login'">Login</button>
             {% endif %}
         </div>
         <article>
