--- a/templates/account_register.html
+++ b/templates/account_register.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
     <head>
         <link rel="stylesheet" href="/static/css/login.css">
@@ -42,30 +41,30 @@
                     <p style="color:red;text-align: center;">{{ error }}</p>
                 {% endif %}
             </span>
-                <form method="POST" action="/account/register" id="register-form">
-                    <label for="username">Username</label><br>
-                    <input type="text" name="username">
-                    <br>
-                    <label for="password">Password</label><br>
-                    <input type="password" name="password">
-                    <br>
-                    <label for="email">Email</label><br>
-                    <input type="email" name="email">
-                    <br>
+            <form method="POST" action="/account/register" id="register-form">
+                <div>
+                    <label for="username">Username</label>
+                    <input type="text" name="username"><br>
+
+                    <label for="password">Password</label>
+                    <input type="password" name="password"><br>
+
+                    <label for="email">Email</label>
+                    <input type="email" name="email"><br>
+                    
                     <div class="bt">
-                    <span id="state">Not Logged in</span>
-                    <br>
-                    <a href="#" id="loginbt" onclick="popup()">Login to BattleTabs</a>
-                    <input type="hidden" name="battletabs_token" hidden>
-                    <input type="hidden" name="battletabs_username" hidden>
-                    <input type="hidden" name="battletabs_id" hidden>
-                    </div>
-                    <br>
+                        <span id="state">Not Logged in</span>
+                        <br>
+                        <a href="#" id="loginbt" onclick="popup()">Login to BattleTabs</a>
+                        <input type="hidden" name="battletabs_token" hidden>
+                        <input type="hidden" name="battletabs_username" hidden>
+                        <input type="hidden" name="battletabs_id" hidden>
+                    </div><br>
                     <button onclick="submit()" id="register">Register</button>
-                    <br><br>
-                </form>
-                <a style="align-items: center;" href="/account/login">Login</a>
-            </span>
+                </div>
+            </form>
+            <br><br>
+            <a style="align-items: center;" href="/account/login">Login</a>
         </div>
     <button id="update" onclick="update()" hidden></button>
     </body>
