--- a/templates/account_register_battletabs.html
+++ b/templates/account_register_battletabs.html
@@ -1,51 +1,7 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/static/css/battletabs_popup.css">
+        <link rel="stylesheet" href="/static/css/login.css">
         <title>Log into BattleTabs</title>
-        <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f4f4f4;
-                margin: 0;
-                padding: 20px;
-            }
-            .main {
-                max-width: 400px;
-                margin: auto;
-                background: white;
-                padding: 20px;
-                border-radius: 5px;
-                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            }
-            h1 {
-                text-align: center;
-            }
-            label {
-                display: block;
-                margin-bottom: 5px;
-            }
-            input[type="text"],
-            input[type="password"],
-            input[type="email"] {
-                width: 100%;
-                padding: 10px;
-                margin-bottom: 10px;
-                border-radius: 3px;
-                border: 1px solid #ccc;
-            }
-            button, input[type="submit"] {
-                width: 100%;
-                padding: 10px;
-                background-color: #bebebe;
-                color: rgb(0, 0, 0);
-                border: none;
-                border-radius: 3px;
-                cursor: pointer;
-            }
-            button:hover, input[type="submit"]:hover {
-                background-color: #858585;
-            }
-        </style>
         <script defer>
             var token, btusername, id;
             async function login() {
@@ -111,23 +67,25 @@
             <span class="error">
                     <p style="color:red;text-align: center;"></p>
             </span>
-            <span id="login-form">
-                <label for="username">Email</label><br>
-                <input type="email" name="username" required><br>
+            <form>
+                <div id="login-form">
+                    <label for="username">Email</label>
+                    <input type="email" name="username" required><br>
 
-                <label for="password">Password</label><br>
-                <input type="password" name="password" required><br>
+                    <label for="password">Password</label>
+                    <input type="password" name="password" required><br>
 
-                <input type="hidden" name="battletabs_token" value="{{ battletabs_token }}">
-                <input type="hidden" name="battletabs_username" value="{{ battletabs_username }}">
-                <input type="hidden" name="battletabs_id" value="{{ battletabs_id }}">
+                    <input type="hidden" name="battletabs_token" value="{{ battletabs_token }}">
+                    <input type="hidden" name="battletabs_username" value="{{ battletabs_username }}">
+                    <input type="hidden" name="battletabs_id" value="{{ battletabs_id }}">
 
-                <button id="login" onclick="login()">Login</button>
-            </span>
-            <span id="user-confirm" hidden>
+                    <button id="login" onclick="login()">Login</button>
+                </div>
+            </form>
+            <div id="user-confirm" hidden>
                 <h2>Hello, <span id="name"></span></h2>
-                <button id="confirm" onclick="confirm()">Let's goo!</button>
-            </span>
+                <button id="confirm" onclick="confirm()">Let's go!</button>
+            </div>
             <br>
             
         </div>
