--- a/templates/misc_home.html
+++ b/templates/misc_home.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}<title>Home | BattleStats</title>{% endblock %}
 {% block content %}
 <div class="full">
     <h1 class="title">Welcome, {{user[1]}}</h1>
