--- a/templates/misc_index.html
+++ b/templates/misc_index.html
@@ -1,4 +1,5 @@
 {% extends "main.html" %}
+{% block title %}<title>BattleStats</title>{% endblock %}
 {% block content %}
 <div class="full">
     <h1 class="title">Welcome to BattleStats!</h1>
