--- a/templates/misc_home.html
+++ b/templates/misc_home.html
@@ -18,7 +18,7 @@
         <li>Gold: {{stats[7]}}</li>
         <li>Gems: {{stats[8]}}</li>
         <li>Last updated: {{stats[9].strftime("%Y-%m-%d %H:%M:%S")}}</li>
-        <li>Updates when you refresh the page</li>
+        <li>Updates when you refresh the page (cd 5 mins)</li>
         {% else %}
         <li>No stats available yet. Wait a minute and refresh the page for your stats to update.</li>
         {% endif %}
