--- a/templates/misc_home.html
+++ b/templates/misc_home.html
@@ -1,26 +1,77 @@
 {% extends "main.html" %}
 {% block title %}<title>Home | BattleStats</title>{% endblock %}
+{% block head %}
+<script src="/static/js/chart.js"></script>
+{% if stats %}
+<script defer>
+document.addEventListener('DOMContentLoaded', function() {
+    const data = {{ history | tojson }}.reverse();
+    const winrateCanvas = document.getElementById('winrate');
+    const trophiesCanvas = document.getElementById('trophies');
+    var winrateData = [];
+    var trophiesData = [];
+    var timestamps = [];
+    data.forEach((item) => {
+        winrateData.push(Math.round(item[3]*100));
+        trophiesData.push(item[5]);
+        timestamps.push(item[9]);
+    });
+    new Chart(winrateCanvas, {
+        type: 'line',
+        data: {
+            labels: timestamps,
+            datasets: [{
+                label: 'Win Rate (%)',
+                data: winrateData,
+                borderWidth: 1
+            }]
+        }
+    });
+    new Chart(trophiesCanvas, {
+        type: 'line',
+        data: {
+            labels: timestamps,
+            datasets: [{
+                label: 'Trophies',
+                data: trophiesData,
+                borderWidth: 1
+            }]
+        }
+    });
+});
+</script>
+{% endif %}
+{% endblock %}
+
 {% block content %}
 <div class="full">
     <h1 class="title">Welcome, {{user[1]}}</h1>
-    <p class="full">Uhh, this is kind of awkward...<br>
-    This page is still under construction, so there's not much to see here yet.<br>
-    In the meantime, I'll just chuck your latest stats here:
-    </p>
-    <ul>
-        {% if stats %}
-        <li>Wins: {{stats[1]}}</li>
-        <li>Losses: {{stats[2]}}</li>
-        <li>Winrate: {{round(stats[3], 2) * 100}}%</li>
-        <li>Games Played: {{stats[4]}}</li>
-        <li>League Trophies: {{stats[5]}}</li>
-        <li>Diamonds: {{stats[6]}}</li>
-        <li>Gold: {{stats[7]}}</li>
-        <li>Gems: {{stats[8]}}</li>
-        <li>Last updated: {{stats[9].strftime("%Y-%m-%d %H:%M:%S")}}</li>
-        <li>Updates when you refresh the page (cd 5 mins)</li>
-        {% else %}
-        <li>No stats available yet. Wait a minute and refresh the page for your stats to update.</li>
-        {% endif %}
-    </ul>
+    <div class="stat_container">
+        <div>
+            <h3>Games</h3>
+            <p>Total: {{stats[4]}}</p>
+            <p>Wins: {{stats[1]}}</p>
+            <p>Losses: {{stats[2]}}</p>
+            <p>Win Rate: {{int(round(stats[3]*100,0))}}%</p>
+        </div>
+        <div>
+            <h3>League</h3>
+            <p>Current League: {{stats[5]}}</p>
+            <p>Diamonds: {{stats[6]}}</p>
+        </div>
+        <div>
+            <h3>Currency</h3>
+            <p>Gold: {{stats[7]}}</p>
+            <p>Gems: {{stats[8]}}</p>
+        </div>
+    </div>
+    <div class="chart_container">
+        <div>
+            <canvas id="winrate"></canvas>
+        </div>
+        <div>
+            <canvas id="trophies"></canvas>
+        </div>
+    </div>
+</div>
 {% endblock %}
